# kazane_game_launcher

./: .gitignore  Cargo.toml  README.md  build.rs  design.md
data/: game_list.json
src/: api.rs  lib.rs  main.rs  process.rs
src/data/: mod.rs
src/data/local/: game_data.rs  mod.rs  settings.rs
src/data/remote/: game_list.rs  mod.rs  provider.rs  release.rs
src/gui/: app.rs  mod.rs
src/installer/: api.rs  install.rs  mod.rs  uninstall.rs  update.rs
src/state/: app_state.rs  game_state.rs  mod.rs
src/utils/: file.rs
tests/: api_integration.rs  app_state_integration.rs  fetch_readme.rs  install_exe.rs  install_flow_from_game_list.rs  install_progress_cancel.rs  install_zip.rs  integration_tests.rs  process_manager.rs  remote_fetch.rs  search_tests.rs
