[package]
name = "kazane_game_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"

eframe = "0.34.2"
egui = "0.34.2"
egui_commonmark = "0.23.0"
image = { version = "0.25.10", features = ["png", "jpeg"] }

reqwest = "0.13.3"

tokio = { version = "1.52.3", features = ["full"]}

serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"

octocrab = "0.50.0"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.3"
