[package]
name = "kazane_game_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"

eframe = "0.34.2"
egui = "0.34.2"
egui_commonmark = { version = "0.23.0", features = ["fetch"] }
image = { version = "0.25.10",default-features = false, features = ["png", "jpeg"] }

reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream", "native-tls"] }
futures-util = "0.3"

tokio = { version = "1.52.3", features = ["rt-multi-thread", "process", "time", "macros", "fs", "io-util", "sync", "net"] }

serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"

base64 = "0.22.1"
sha2 = "0.11.0"
hex = "0.4"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tempfile = "3.3"
fs2 = "0.4.3"

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
